--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@ api_key.txt
 *.userosscache
 *.sln.docstates
 
+db.sqlite3
+*.sqlite3
 django-env/*
 .idea/
+venv/*
 .vscode/*
 mail_inform.txt
 auth_keys.txt
