--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 api_key.txt
+django-env/*
 # User-specific files
 *.rsuser
 *.suo
